--- a/templates/base.html
+++ b/templates/base.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Zandrex-Python">
-    <link rel="icon" type="image/png" href="{% static "image/Logo.png" %}">
-    <title>Portfolio</title>
+    <link rel="icon" type="image/png" href="{% static 'image/Logo.png' %}">
+    <title>Recipes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static "styles.css" %}">
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
     <link href="https://fonts.googleapis.com/css?family=Oswald|RobotoSlab|Rubik Vinyl|Pacifico|Tangerine" rel="stylesheet">
   </head>
   <body>
@@ -21,22 +21,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" href="{% url 'home'%}">Домой</a>
+              <a class="nav-link active" href="/">Главная</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Блоги</a>
+              <a class="nav-link" href="#">Рецепты</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Проекты</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">Контакт</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">Блок связи</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled">...</a>
+              <a class="nav-link" href="recipes/add">Добавить рецепт</a>
             </li>
           </ul>
           <span class="navbar-text">
