--- a/templates/index.html
+++ b/templates/index.html
@@ -4,59 +4,34 @@
     {% load static %}
     <br>
     <div class="container text-center">
-      <img src ="{% static 'image/Logo003.png' %}" height = 300 class="rounded-3">
-      <h1 style="font-family: 'Rubik Vinyl'; font-size: 50px" class="text-black">Zandrex3DxPython</h1>
-    </div>
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-      </div>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="{% static 'image/3.png' %}" height = 400 class="rounded mx-auto d-block" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="{% static 'image/Gun1.png' %}" height = 400 class="rounded mx-auto d-block" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="{% static 'image/Gun04.png' %}" height = 400 class="rounded mx-auto d-block" alt="...">
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
+      <h1 style="font-family: 'Rubik Vinyl'; font-size: 50px" class="text-black">Книга рецептов</h1>
     </div>
     <div class="mb-1 border-bottom border-2 border-dark">
-      <h2 class="fw-bold p-3" id = "title">Мои проекты</h2>
+      <h2 class="fw-bold p-3" id = "title">Рецепты</h2>
     </div>
     <div class="container text-center">
       <div class="row">
-        {% for project in projects %}
+        {% for recipe in recipes %}
+          {% if recipe.status == "PB" %}
           <div class="col-4 mb-3">
             <div class="shadow sm p-2 border border-opacity-50 rounded-bottom">
-              <div id = "title" class="pb-2 rounded-3" ><strong>{{ project.title }}</strong></div>
-              <img src ="{{ project.image.url }}" class="img-fluid rounded-3">
-                <p class="text-start">{{ project.description }}</p>
-
-              {% if project.url %}
-                <br>
-                <button type="button" class="btn btn-primary">
-                <a href  = "btn btn-primary {{ project.url }}" class="link-light">Нажми на меня</a>
-              </button>
-              {% endif %}
-            </div>
+                  <div class="mb-auto p-2">
+                      <p id = "title" ><strong>{{ recipe.title }}</strong></p>
+                      <img src ="{{ recipe.image.url }}" class="img-fluid rounded-3" width="300px" height="200px">
+                  </div>
+                  <div class="p-2">
+                      <p class="text-start">{{ recipe.description }}    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, rerum!</p>
+                  </div>
+                  <div class="p-2">
+                      <p class="text-start">{{ recipe.cooking_steps }}     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus est facere iste qui ratione rem rerum similique sint veritatis? Alias, animi delectus distinctio, dolorem doloribus ducimus itaque minus necessitatibus perferendis provident, quasi soluta totam voluptatibus! Cumque dolor eligendi id iste minima mollitia recusandae totam ut? Consequatur distinctio laudantium maxime modi qui quod. Asperiores at aut corporis cumque cupiditate dolor, dolorum error esse eveniet facere fugiat fugit id inventore ipsum laborum modi mollitia neque nobis quaerat qui, quibusdam quod recusandae sequi sint soluta vel voluptate. Ad autem delectus dignissimos dolores dolorum ducimus, enim esse eveniet, itaque nulla tempora ullam, vitae voluptas?</p>
+                  </div>
+              </div>
           </div>
+          {% endif %}
         {% endfor%}
       </div>
     </div>
-    <div class="d-flex" style="height: 200px;">
+    <div class="d-flex " style="height: 200px;">
       <div class="vr"></div>
     </div>
 
