--- a/templates/signupuser.html
+++ b/templates/signupuser.html
@@ -9,7 +9,7 @@
 <form method="POST">
 {% csrf_token %}
 {{form.as_p}}
-<button type="submit">Sign Up</botton>
+<button type="submit">Sign Up</button>
 </form>
 
 {% endblock %}
